--- a/_includes/header.html
+++ b/_includes/header.html
@@ -25,7 +25,6 @@
 		{% endfor %}
 	</ul>
 	<ul class="actions vertical">
-		<li><a href="#" class="button special fit">Get Started</a></li>
-		<li><a href="#" class="button fit">Log In</a></li>
+		<li><a href="{{ site.get_started }}" class="button special fit">Get Started</a></li>
 	</ul>
 </nav>
