--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -21,7 +21,7 @@
             <div class="content">
                 <p style="text-transform: uppercase;">{{ site.description }}</p>
                 <ul class="actions">
-                    <li><a href="{{ site.get_started }}" class="button next scrolly">Get Started</a></li>
+                    <li><a href="{{ site.get_started }}" class="button next scrolly">{{ site.call_to_action }}</a></li>
                 </ul>
             </div>
         </div>
@@ -41,7 +41,7 @@
                 </header>
                 <p>{{ content }}</p>
                 <ul class="actions">
-                    <li><a href="{{ site.get_started }}" class="button next">Get Started</a></li>
+                    <li><a href="{{ site.get_started }}" class="button next">{{ site.call_to_action }}</a></li>
                 </ul>
             </div>
         </section>
