Hours and events update

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -55,7 +55,11 @@
 					{% endif %}
 					{% if site.country %}
 					    {{ site.country }}
+					{% endif %}<br />
+					{% if site.hours %}
+					    {{ site.hours }}
 					{% endif %}
+
 					</span>
 				</div>
 			</section>
