--- a/_layouts/allposts.html
+++ b/_layouts/allposts.html
@@ -18,14 +18,15 @@
 
       <!-- One -->
       <section id="one">
+
 	<div class="inner">
-          {% for post in site.posts %}
+    {{ content }}
+          {% for post in site.posts reversed %}
 	  {% if post.title != 404 %}
 	  <header class="major">
-	    <h1>{{ post.title }}</h1>
+	    <h2><a href="{{ post.url }}">{{ post.date | date_to_long_string }}: {{ post.title }}</a></h2>
 	  </header>
 	  {% if post.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ post.image }}" alt="" /></span>{% endif %}
-	  {% if post.date %}<p>{{ post.date }}</p>{% endif %}
 	  <p>{{ post.content }}</p>
 	  {% endif %}
           {% endfor %}
