--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,15 @@
 		<header class="major">
 			<h1>{{ page.title }}</h1>
 		</header>
-		{% if page.image %}<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
+		<p>
+		<span class="post-date">{{ page.date | date_to_long_string }}</span>
+		<span class="post-time">
+		{% if page.time %}{{ page.time }} 
+		{% else %} TBD
+		{% endif %}
+		</span>
+		{% if page.image %}
+		<span class="image main"><img src="{{ site.baseurl }}/{{ page.image }}" alt="" /></span>{% endif %}
 		<p>{{ content }}</p>
 	</div>
 </section>
